add class student enrollment criteria, class assignment subject assignment to teachers. added new migrations and updated docs to reflect the changes
